--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint \"src/**/*.js\"",
     "prettier": "prettier --config .prettierrc \"src/**/*.js\" --write",
-    "build": "npx tsc",
+    "test": "npx tsc && nodemon ./build/index.js",
     "jasmine": "jasmine"
   },
   "repository": {
@@ -20,14 +20,17 @@
   },
   "homepage": "https://github.com/NaderSayed-159/Image-Processing-Api#readme",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/jasmine": "^4.3.0",
     "@types/node": "^18.11.9",
+    "@types/nodemon": "^1.19.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
