--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "jasmine": "^4.5.0",
     "jasmine-spec-reporter": "^7.0.0",
