attach compiled js to html

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "plugins": [
         "@typescript-eslint"
     ],
+        "ignorePatterns": ["build/tests/*.js"],
     "rules": {
         "@typescript-eslint/no-var-requires": 0
     }
